--- a/SCP343/SCP-343.csproj
+++ b/SCP343/SCP-343.csproj
@@ -67,6 +67,12 @@
     <Reference Include="Subclass-1.2.15">
       <HintPath>..\..\..\Downloads\Subclass-1.2.15.dll</HintPath>
     </Reference>
+    <Reference Include="CommandSystem.Core">
+      <HintPath>..\..\..\..\..\Volumes\Games\steamapps\common\SCP Secret Laboratory ServerMod\SCPSL_Data\Managed\CommandSystem.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="NorthwoodLib">
+      <HintPath>..\..\..\..\..\Volumes\SCP-343-1.4.3\RemoteKeycard-1.4.1-3.6.0\dependencies\NorthwoodLib.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Scp343.cs" />
@@ -76,6 +82,8 @@
     <Compile Include="patches\SCP939.cs" />
     <Compile Include="patches\EscapePatch.cs" />
     <Compile Include="patches\SCP096.cs" />
+    <Compile Include="ExtentionMethods.cs" />
+    <Compile Include="Commands\Spawn343.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
