--- a/SCP343/SCP-343.csproj
+++ b/SCP343/SCP-343.csproj
@@ -29,28 +29,22 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="Exiled.Loader">
-      <HintPath>..\packages\EXILED.2.1.30\lib\net472\Exiled.Loader.dll</HintPath>
+      <HintPath>..\packages\EXILED.2.3.4\lib\net472\Exiled.Loader.dll</HintPath>
     </Reference>
     <Reference Include="Exiled.Events">
-      <HintPath>..\packages\EXILED.2.1.30\lib\net472\Exiled.Events.dll</HintPath>
+      <HintPath>..\packages\EXILED.2.3.4\lib\net472\Exiled.Events.dll</HintPath>
     </Reference>
     <Reference Include="Exiled.Permissions">
-      <HintPath>..\packages\EXILED.2.1.30\lib\net472\Exiled.Permissions.dll</HintPath>
+      <HintPath>..\packages\EXILED.2.3.4\lib\net472\Exiled.Permissions.dll</HintPath>
     </Reference>
     <Reference Include="Exiled.Updater">
-      <HintPath>..\packages\EXILED.2.1.30\lib\net472\Exiled.Updater.dll</HintPath>
-    </Reference>
-    <Reference Include="0Harmony">
-      <HintPath>..\..\..\Downloads\Exiled\EXILED\Plugins\dependencies\0Harmony.dll</HintPath>
+      <HintPath>..\packages\EXILED.2.3.4\lib\net472\Exiled.Updater.dll</HintPath>
     </Reference>
     <Reference Include="Exiled.API">
-      <HintPath>..\packages\EXILED.2.1.30\lib\net472\Exiled.API.dll</HintPath>
+      <HintPath>..\packages\EXILED.2.3.4\lib\net472\Exiled.API.dll</HintPath>
     </Reference>
     <Reference Include="System.ComponentModel.DataAnnotations">
       <HintPath>..\..\..\Downloads\Exiled\EXILED\Plugins\dependencies\System.ComponentModel.DataAnnotations.dll</HintPath>
-    </Reference>
-    <Reference Include="YamlDotNet">
-      <HintPath>..\..\..\Downloads\Exiled\EXILED\Plugins\dependencies\YamlDotNet.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.CoreModule">
       <HintPath>..\..\..\..\..\Volumes\SCP-343-1.4.3\UnityEngine.CoreModule.dll</HintPath>
@@ -61,9 +55,6 @@
     <Reference Include="Assembly-CSharp-firstpass">
       <HintPath>..\..\..\..\..\Volumes\Games\steamapps\common\SCP Secret Laboratory ServerMod\SCPSL_Data\Managed\Assembly-CSharp-firstpass.dll</HintPath>
     </Reference>
-    <Reference Include="Subclass-1.2.15">
-      <HintPath>..\..\..\Downloads\Subclass-1.2.15.dll</HintPath>
-    </Reference>
     <Reference Include="CommandSystem.Core">
       <HintPath>..\..\..\..\..\Volumes\Games\steamapps\common\SCP Secret Laboratory ServerMod\SCPSL_Data\Managed\CommandSystem.Core.dll</HintPath>
     </Reference>
@@ -71,10 +62,25 @@
       <HintPath>..\..\..\..\..\Volumes\SCP-343-1.4.3\RemoteKeycard-1.4.1-3.6.0\dependencies\NorthwoodLib.dll</HintPath>
     </Reference>
     <Reference Include="Exiled.Bootstrap">
-      <HintPath>..\packages\EXILED.2.1.30\lib\net472\Exiled.Bootstrap.dll</HintPath>
+      <HintPath>..\packages\EXILED.2.3.4\lib\net472\Exiled.Bootstrap.dll</HintPath>
     </Reference>
     <Reference Include="Assembly-CSharp">
       <HintPath>..\..\..\..\..\Volumes\SCP-343-1.4.3\RemoteKeycard-1.4.1-3.6.0\Assembly-CSharp.dll</HintPath>
+    </Reference>
+    <Reference Include="Exiled.CreditTags">
+      <HintPath>..\packages\EXILED.2.3.4\lib\net472\Exiled.CreditTags.dll</HintPath>
+    </Reference>
+    <Reference Include="0Harmony">
+      <HintPath>..\..\Downloads\Exiled-3\EXILED\Plugins\dependencies\0Harmony.dll</HintPath>
+    </Reference>
+    <Reference Include="SCP008X">
+      <HintPath>..\..\Downloads\SCP008X.dll</HintPath>
+    </Reference>
+    <Reference Include="YamlDotNet">
+      <HintPath>..\..\Downloads\Exiled-3\EXILED\Plugins\dependencies\YamlDotNet.dll</HintPath>
+    </Reference>
+    <Reference Include="Subclass-1.2.15">
+      <HintPath>..\..\Downloads\Subclass-1.2.15.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -89,6 +95,7 @@
     <Compile Include="Commands\Spawn343.cs" />
     <Compile Include="patches\SCP173.cs" />
     <Compile Include="scp343badge.cs" />
+    <Compile Include="patches\scp008patch.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
